2010-03-24 [pawel]	0.26.0cvs2

	* commitHelper
		- Portability fixes
		- Add my name
	* libgtkhtml/layout/html/Makefile.am
	* libgtkhtml/layout/html/htmlboxembedded.c
	* libgtkhtml/layout/html/htmlembedded.c
	* libgtkhtml/view/Makefile.am
	* libgtkhtml/view/htmlview.c
	* src/gtkhtml2_viewer.c
		Fix build with GTK+ 2.19

2010-02-10 [colin]	0.26.0cvs1

	* libgtkhtml/layout/htmlboxtext.c
		Fix bug 2103, 'Crash when clicking on a message'
		Got workaround function from gtkhtml3.14.

2010-01-08 [paul]	0.26

	0.26 released

2010-01-08 [paul]	0.25.0cvs2

	* configure.ac
	* po/nl.po
		added by Marcel Pol
	* po/ca.po
	* po/cs.po
	* po/es.po
	* po/fi.po
	* po/id.po
	* po/ja.po
	* po/sk.po
		updated by Miquel Oliete, David Vachulka, Ricrado Mones Lastra,
		Tommi Pirinen, MSulchan Darmawan, kazken3, Slavko

2009-10-20 [colin]	0.25.0cvs1

	* libgtkhtml/css/html.css.h
		Add a default CSS for blockquote type "cite".
		Fixes Thunderbird quoting; patch by Jean Diraison.

2009-10-09 [paul]	0.25

	0.25 released


2009-07-04 [colin]	0.24.0cvs2

	* src/gtkhtml2_viewer.c
		Fix indentation (Tabs not spaces)

2009-07-04 [iwkse]	0.24.0cvs1

	* src/gtkhtml2_viewer.c
            Fix a potential leak in case of error.

2009-07-03 [paul]	0.24

	0.24 released

2009-07-03 [paul]	0.23.0cvs5

	* configure.ac
	* po/id.po
		added by MSulchan Darmawan
	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/ru.po
		updated by Ricardo Mones, Tommi Pirinen, Pader Rezso,
		Andrea Spadaccini, and Aleksei Miheev

2009-07-01 [colin]	0.23.0cvs4

	* libgtkhtml/css/cssdebug.c
	* libgtkhtml/css/cssparser.c
	* libgtkhtml/layout/html/htmlboxembeddedimage.c
	* libgtkhtml/layout/html/htmlboximage.c
	* libgtkhtml/view/htmlview.c
		Fix bug 1939, ' Error parsing CSS in HTML message 
		causes claws-mail to quit': don't use g_error...

2009-06-29 [colin]	0.23.0cvs3

	* libgtkhtml/layout/htmlboxtext.c
		Fix bug 1937, 'another crasher in gtkhtml plugin'

2009-03-08 [paul]	0.23.0cvs2

	* configure.ac
	* po/ja.po