@@ -140,3 +140,4 @@
 ( cvs diff -u -r 1.1.2.179 -r 1.1.2.180 configure.ac;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 po/ca.po;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/cs.po;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 po/es.po;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 po/fi.po;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/id.po;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/ja.po;  diff -u /dev/null po/nl.po;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 po/sk.po;  ) > 0.25.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 libgtkhtml/layout/htmlboxtext.c;  ) > 0.26.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 commitHelper;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/layout/html/Makefile.am;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/layout/html/htmlboxembedded.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/layout/html/htmlembedded.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 libgtkhtml/view/Makefile.am;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 libgtkhtml/view/htmlview.c;  cvs diff -u -r 1.1.2.86 -r 1.1.2.87 src/gtkhtml2_viewer.c;  ) > 0.26.0cvs2.patchset
+( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/a11y/Makefile.am;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 libgtkhtml/a11y/htmlviewaccessible.c;  ) > 0.26.0cvs3.patchset
