@@ -1,3 +1,9 @@
+2010-03-25 [pawel]	0.26.0cvs3
+
+	* libgtkhtml/a11y/Makefile.am
+	* libgtkhtml/a11y/htmlviewaccessible.c
+		Complete previous commit, fix build with --enable-accessibility
+
 2010-03-24 [pawel]	0.26.0cvs2
 
 	* commitHelper
